Add interactive/agentic session support (JDISession)
Enables hybrid scripting + interactive workflows without requiring a full
CLI or pre-declaration of all debugging questions upfront.

Core additions to JDIScript:
- start() / start(List<handlers>): non-blocking event loop (daemon thread);
  returns EventThread so callers can join() or ignore it
- withSuspend(Runnable) / withSuspend(Supplier<T>): suspend VM, inspect
  state, resume — no breakpoint needed; ref-counted so safe inside handlers

New util/JDISession — AutoCloseable session wrapper for interactive use:
- JDISession.start(vm) / start(vm, handlers): connect and start loop
- session.j: public JDIScript field for ergonomic REPL/JShell access
- withSuspend(Runnable/Supplier): delegate to JDIScript.withSuspend
- awaitMethodInvocation(class, method): CompletableFuture<BreakpointEvent>
  for sequential, query-driven debugging; handles already-loaded classes
  directly (sets + cleans up breakpoints) and defers to ClassPrepare for
  not-yet-loaded classes
- then(future, action): convenience for chaining inspection after await
- join() / close(): lifecycle management (close disconnects, target lives)

Enables three new patterns:
1. Point-in-time inspection: session.withSuspend(() -> j.instanceCount(...))
2. Sequential event awaiting: session.awaitMethodInvocation(...).orTimeout(...)
3. Agent loop: repeatedly await and process events based on AI decisions

Also adds InteractiveExample demonstrating all three patterns, and updates
skill docs (SKILL.md, api-reference.md, examples.md) with JDISession API,
JShell/REPL integration guide, and the interactive/agentic recipes.

https://claude.ai/code/session_01Dngc2hsmxeUf1jsefGMWKE